# hackutd25

./: .env  .env.example  .gitignore  AGENT_COMMUNICATION_FORMAT.md  AGENT_OUTPUT_EXAMPLES.md  ARCHITECTURE.md  CLEANUP_SUMMARY.md  COMPLETION_CHECKLIST.md  DEMO_HANDOFF.md  DEMO_PREP_STATUS.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_FEATURE_GAP.md  PROJECT_REEVALUATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  STATUS.md  TESTS_SUMMARY.md  TEST_EXECUTION_REPORT.txt  TEST_INDEX.md  TEST_SUITE_SUMMARY.txt  agent_conversation_example.py  agent_orchestration_async_example.py  demo.bat  orchestration_tests_standalone.py  pytest.ini  setup-phase1.ps1  start-backend.ps1  start-frontend.ps1  test-websocket.html  test_server.py
.claude/: settings.local.json
.github/workflows/: local-ci.yml
backend/: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.in
backend/app/: Dockerfile  Makefile  __init__.py  main.py  pyproject.toml  requirements-gpu.txt  requirements-voice.txt  requirements.txt  server.py
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: 001_initial_schema.py
backend/app/api/: market.py  websocket.py
backend/app/api/routes/: __init__.py  agent_chat.py  app.py  auth.py  crash_simulator.py  finance.py  market.py  orchestrator_routes.py  portfolio.py  strategy.py  trades.py  voice.py
backend/app/core/: constants.py  database.py  logging.py  settings.py  types.py
backend/app/engines/: crash_scenario_engine.py
backend/app/middleware/: auth.py
backend/app/services/: README.md  alpaca.py  credential_encryption.py  finance_adapter.py  mock_plaid.py  news_aggregator.py  news_search.py  orchestrator.py  personal_finance.py  security.py  seed_data.py  voice.py
backend/app/services/agents/: definition_agent.py  explainer_agent.py  strategy_agent.py  vocabulary_agent.py
backend/app/services/dao/: user_dao.py
backend/app/services/rag/: __init__.py  chroma_service.py
backend/app/utils/: test_messages.py
backend/app/workers/: crash_simulator.py
client/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/electron/: main.js  preload.js
client/front/: .env.example  .gitignore  AI_INTEGRATION.md  AI_INTEGRATION_SUMMARY.md  index.html  package.json  setup-ai.bat  setup-ai.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
client/front/src/: App.tsx  main.tsx
config/: README.md
data/: README.md
data/historical-markets/: .gitkeep  README.md
data/mock-data/: README.md
demos/: orchestration_demo_live.py
docs/api/: README.md
docs/architecture/: README.md
docs/user-guide/: README.md
electron/: README.md  main.js  preload.js
frontend/: README.md
frontend/src/: App.jsx
frontend/src/contexts/: AgentContext.js
frontend/src/hooks/: useMarketData.js  usePortfolio.js  useVoiceRecognition.js  useWebSocket.js
frontend/src/pages/: CrashSimulatorPage.jsx  DashboardPage.jsx  TradingPage.jsx  WarRoomPage.jsx
frontend/src/styles/: globals.css
public/assets/: README.md
reports/01-baseline/: current-arch.mmd  dep-graph.mmd  inventory.md  run-log.md  target-arch.mmd
reports/02-backend-standardization/: plan.md
scripts/: README.md  backup_data.py  create_default_user.py  demo-setup.ps1  dev_seed.py  fix_auth_calls.py  quick_improvements.py  requirements.txt  run.ps1  run.sh  setup.ps1  setup.sh  start-frontend.ps1  stock_analysis.py  validate_env.py
src/agents/: strategy_agent.py
src/agents/executor-agent/: README.md
src/agents/explainer-agent/: README.md
src/agents/market-agent/: README.md
src/agents/orchestrator/: README.md
src/agents/risk-agent/: README.md
src/agents/strategy-agent/: README.md
src/agents/user-agent/: README.md
src/backend/: alembic.ini  orchestration_tests.py  orchestrator.py  output_refinement_pipeline.py  requirements.in  requirements.txt  server.py  test_phase2.py  test_setup.py  war_room_interface.py
src/backend/agents/: agent_integration_tests.py  all_agents.py  executor_agent.py  formatting_agent.py  market_agent.py  risk_agent.py  strategy_agent.py
src/backend/alembic/: env.py
src/backend/api/: agents_api.py  app.py  auth.py  full_api.py  full_api_2.py  portfolio.py  stock_time_analysis.py  strategy.py  trades.py
src/backend/core/: agent_network.py  base_agent.py  settings.py
src/backend/engines/: gpu_backtest.py
src/backend/integrations/: alpaca_broker.py
src/backend/middleware/: auth.py  exception_handler.py
src/backend/models/: __init__.py  goal.py  performance.py  portfolio.py  pydantic_models.py  subscription.py  trade.py  user.py
src/backend/routers/: __init__.py  auth.py  portfolio.py  system.py
src/backend/scripts/: index_historical_data.py
src/backend/services/: README.md  agent_debate_engine.py  auth.py  db.py  finance_adapter.py  goal_planner.py  historical_data.py  json_storage_service.py  logging_service.py  news_search.py  performance_attribution.py  plaid_integration.py  plaid_service.py  postgres_db.py  redis_streams.py  security.py  subscription_detector.py  trade_validator.py  voice.py  voice_goal_parser.py  voice_security.py
src/backend/tests/: __init__.py  test_production_features.py
src/core/goal-planner/: README.md
src/core/monte-carlo/: README.md
src/core/rag-system/: README.md
src/core/subscription-tracker/: README.md
src/services/alpaca-api/: README.md
src/services/claude-ai/: README.md
src/services/plaid-api/: README.md
src/services/web-scraper/: README.md
src/ui/dashboard/: README.md
src/ui/market-simulator/: README.md
src/ui/news-feed/: README.md
src/ui/voice-interface/: README.md
src/ui/war-room/: README.md
tests/: EXECUTION_GUIDE.md  README.md  conftest.py  requirements.txt
tests/integration/: README.md  test_agent_integration.py  test_auth_endpoints.py
tests/unit/: README.md  test_api_endpoints.py  test_auth_api.py  test_base_agent.py  test_executor_agent.py  test_json_storage.py  test_market_agent.py  test_models.py  test_risk_agent.py  test_strategy_agent.py
(+103 files in other folders)
