[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-backend"
version = "1.0.0"
description = "APEX Multi-Agent Financial Operating System - Backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "APEX Team", email = "team@apex-financial.com"},
]
maintainers = [
    {name = "APEX Team", email = "team@apex-financial.com"},
]
keywords = ["finance", "ai", "agents", "trading", "fastapi", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
]

dependencies = [
    # Core web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.6",
    "cryptography>=42.0.0",

    # AI & LLM
    "openai>=1.0.0",
    "sentence-transformers>=2.7.0",

    # Vector Database
    "chromadb>=0.4.0",

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # HTTP Client
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",

    # Trading APIs
    "alpaca-trade-api>=3.2.0",

    # TensorFlow/Keras (with compatible protobuf)
    "tensorflow>=2.13.0,<2.16.0",
    "protobuf>=3.20.0,<4.0.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Caching & PubSub
    "redis>=5.0.0",

    # Background Tasks
    "celery>=5.3.0",

    # Logging & Monitoring
    "structlog>=23.2.0",
    "sentry-sdk[fastapi]>=1.40.0",

    # Optional: Voice Processing
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",

    # Optional: GPU Acceleration
    "cupy>=12.0.0",

    # Development
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # For testing FastAPI
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=20.0.0",
]
gpu = [
    "cupy>=12.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]
voice = [
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/apex"
Documentation = "https://apex.readthedocs.io/"
Repository = "https://github.com/your-org/apex.git"
Issues = "https://github.com/your-org/apex/issues"
Changelog = "https://github.com/your-org/apex/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"app" = ["*.txt", "*.md", "*.yaml", "*.yml"]

# =============================================================================
# Code Quality Tools
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C90", # mccabe
    "DJ",  # flake8-django
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # flake8-eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # numpy
    "AIR", # airflow
    "PERF", # perflint
    "FURB", # refurb
    "LOG", # flake8-logging
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "S101",    # assert used (fine in tests)
    "S104",    # binding to all interfaces (common in dev)
    "COM812",  # trailing comma missing (handled by black)
    "ISC001",  # implicit str concat (handled by black)
    "Q000",    # single quotes (handled by black)
    "Q001",    # single quote docstring (handled by black)
    "Q002",    # single quote docstring (handled by black)
    "Q003",    # change quote type (handled by black)
    "ERA001",  # commented out code (handled separately)
    "T20",     # print used (sometimes needed in scripts)
    "PLR0913", # too many arguments (sometimes necessary)
    "PLR2004", # magic value comparison (sometimes clearer)
    "FBT001",  # boolean positional arg in func def (sometimes clearer)
    "FBT002",  # boolean default positional arg in func def (sometimes clearer)
    "FBT003",  # boolean positional arg in func call (sometimes clearer)
    "A003",    # class attribute shadows builtin (sometimes intentional)
    "S603",    # subprocess call without shell=True (sometimes needed)
    "S607",    # start process with partial path (sometimes needed)
    "TRY003",  # long exception message (sometimes needed)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*" = ["S101", "ARG001"]  # assert in tests, unused args in fixtures
"migrations/**/*" = ["E501"]  # long lines in generated migrations
"scripts/**/*" = ["T20", "S603", "S607"]  # print and subprocess in scripts

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "uvicorn",
    "alembic",
    "redis",
    "chromadb",
    "openai",
    "pandas",
    "numpy",
    "aiohttp",
    "httpx",
    "structlog",
    "pytest",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "app.tests.*",
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "chromadb.*",
    "sentence_transformers.*",
    "faster_whisper.*",
    "edge_tts.*",
    "librosa.*",
    "soundfile.*",
    "cupy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "external: Tests requiring external services",
    "gpu: Tests requiring GPU",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/migrations/*",
    "app/core/settings.py",  # Config, hard to test
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# =============================================================================
# Development Tools
# =============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"

[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.5.0", hooks = [
        {id = "trailing-whitespace"},
        {id = "end-of-file-fixer"},
        {id = "check-yaml"},
        {id = "check-added-large-files"},
        {id = "check-merge-conflict"},
        {id = "debug-statements"},
    ]},
    {repo = "https://github.com/psf/black", rev = "23.12.1", hooks = [
        {id = "black", language_version = "python3.10"},
    ]},
    {repo = "https://github.com/pycqa/isort", rev = "5.13.2", hooks = [
        {id = "isort", args = ["--profile", "black"]},
    ]},
    {repo = "https://github.com/charliermarsh/ruff-pre-commit", rev = "v0.1.14", hooks = [
        {id = "ruff", args = ["--fix"]},
    ]},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.7.1", hooks = [
        {id = "mypy", additional_dependencies = ["types-all"]},
    ]},
]
